Added functionality for toggling plugs to be in an on or off state
